k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:
      containers:
        - name: devsu-app
          image: kristtiandocker/devsu-demo:latest
          ports:
            - containerPort: 8000
