k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-service
spec:
  selector:
    app: devsu-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
